# specomp

./: .gitignore  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: delta_encoding_example.qmd
src/abstract/: compressors.py
src/specomp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/specomp/abstract/: compressors.py  steps.py
src/specomp/compressors/: __init__.py  compressors.py  generic_compressors.py  simple_delta_encoding_compressor.py
src/specomp/dtypes/: compressor_inputs.py
src/specomp/io/: __init__.py  envi.py  envi_file.py  sides.py
src/specomp/steps/: __init__.py  delta_encoding.py  generic_steps.py  steps.py
tests/: test_compressors.py  test_envi_file.py  test_envi_io.py  test_sides.py  test_steps.py
