[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "specomp"
version = "0.1.0"
description = "API for HSI compression"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]