[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "specomp"
version = "0.1.0"
description = "API for HSI compression"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "spectral",
    "zstandard",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff>=0.15.20",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["specomp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F403", "F401"]
